--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Bonus Calculator Object Challenge</title>
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
     <script src="client.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Bonus Calculator Object Challenge</h1>
+    <ul id='employeeBonuses'>
+    </ul>
   </body>
 </html>
